// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography.H2 should render default markup when no props are passed 1`] = `
<h2
  className="h2 h2--regular h2--onyx-base gtuiZx"
>
  Hello world
</h2>
`;

exports[`Typography.H2 should render with a custom color prop that lacks variants 1`] = `
<h2
  className="h2 h2--regular STcFI"
  color="brand"
>
  Hello world
</h2>
`;

exports[`Typography.H2 should render with a custom weight prop 1`] = `
<h2
  className="h2 h2--semiBold h2--onyx-base kOopEj"
>
  Hello world
</h2>
`;

exports[`Typography.H2 should render with custom color and variant props 1`] = `
<h2
  className="h2 h2--regular h2--accent01-dark guHeFb"
  color="accent01"
>
  Hello world
</h2>
`;

exports[`Typography.H2 should render without children 1`] = `
<h2
  className="h2 h2--regular h2--onyx-base gtuiZx"
/>
`;
